syntax = "proto3";

package pl.demos.load_generation;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "pixielabs.ai/pixielabs/demos/load_generation/proto/;load_generation";

// LocustConfigFile defines the config for a load.
message LocustConfigFile {
  // The locust file template to use.
  string locust_file_tmpl = 1;
  // The phases in the load.
  repeated LocustPhaseConfig phases = 2;
}

// PhaseConfig defines the config for a phase.
message LocustPhaseConfig {
  // The types of users that should be executing
  repeated UserType user_types = 1;
  // How long the phase should last.
  int32 duration = 2; // In seconds.
  // The number of users active during the phase.
  int32 num_users = 3;
  // How many users should spawn per second.
  int32 hatch_rate_per_s = 4;
}

// UserType defines a type of user that will be using the application during a phase.
// <UserType.Name>UserBehavior should be defined in the locustFileTmpl.
message UserType {
  // The name of the user type.
  string name = 1;
  // The ratio of how active the user should be during the phase.
  int32 ratio = 2;
  // The minimum time a user should wait between executing a task.
  int32 min_wait_ms = 3;
  // The maximum time a user should wait between executing a task.
  int32 max_wait_ms = 4;
}
